Fix text remains visible during webfont load

--- a/src/scss/_font-family.scss
+++ b/src/scss/_font-family.scss
@@ -3,6 +3,7 @@
     font-style: normal;
     font-weight: 400;
     src: url('/fonts/alice-regular-webfont.woff2') format('woff2'), url('/fonts/alice-regular-webfont.woff') format('woff');
+    font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
     font-style: normal;
     font-weight: 400;
     src: url('/fonts/cutivemono-regular-webfont.woff2') format('woff2'), url('/fonts/cutivemono-regular-webfont.woff') format('woff');
+    font-display: swap;
 }
 
 @font-face {
@@ -17,4 +19,5 @@
     font-style: normal;
     font-weight: 400;
     src: url('/fonts/imprima-regular-webfont.woff2') format('woff2'), url('/fonts/imprima-regular-webfont.woff') format('woff');
+    font-display: swap;
 }
